[package]
name = "twitch-helprrr"
version = "0.1.0"
edition = "2021"
publish = false

# endingwithwolfred: techyg5RgbPoo techyg5RgbPoo techyg5RgbPoo techyg5RgbPoo

[lib]

[dependencies]
shuttle-service = { version = "0.10.0", features = ["web-rocket"] }
rocket = "0.5.0-rc.2"
twitch-irc = "5.0.0"
tokio = { version = "1.22.0" }
