[package]
name = "twitch-helprrr"
version = "0.1.0"
edition = "2021"
publish = false

# endingwithwolfred: techyg5RgbPoo techyg5RgbPoo techyg5RgbPoo techyg5RgbPoo

[lib]

[dependencies]
shuttle-service = { version = "0.10.0", features = ["web-axum"] }
axum = { version = "0.6.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper-tls = "0.5"
twitch-irc = "5.0.0"
sync_wrapper = "0.1"
tokio = { version = "1.22.0", features = ["full"] }
